--- a/public/chat.html
+++ b/public/chat.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
+    <meta name='viewport' content="width=device-width,initial-scale=1"/>
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png">
-    <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <div class="chat">
+        <button class="chat__sidebar-open">&#9776;</button>
         <div id="sidebar" class="chat__sidebar">
 
         </div>
